res/res_ari.c Fix: Memory leaks in ARI when using Content-Type: application/json

ASTERISK-27305
Reported by: David Hajek
Tested by: David Hajek

Change-Id: Ife3e289062e6cf7d0e7d342dbf79ed96feff441e